[gd_scene load_steps=4 format=3 uid="uid://cpw8a8tenf3fu"]

[ext_resource type="Script" path="res://main_node.gd" id="1_0xfon"]
[ext_resource type="Script" path="res://label.gd" id="2_bcp2y"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_jn7y1"]

[node name="MainNode" type="Node2D"]
script = ExtResource("1_0xfon")

[node name="InputField" type="LineEdit" parent="."]
offset_left = 237.0
offset_top = 596.0
offset_right = 486.0
offset_bottom = 627.0
placeholder_text = "Введите текст/ Your Text"
alignment = 1

[node name="OutputLabel" type="Label" parent="."]
offset_left = 207.0
offset_top = 530.0
offset_right = 510.0
offset_bottom = 564.0
horizontal_alignment = 1

[node name="SubmitButton" type="ColorRect" parent="."]
offset_left = 210.0
offset_top = 680.0
offset_right = 516.0
offset_bottom = 720.0

[node name="Label" type="Label" parent="SubmitButton"]
material = SubResource("CanvasItemMaterial_jn7y1")
layout_mode = 0
offset_left = 126.0
offset_top = 8.0
offset_right = 166.0
offset_bottom = 31.0
text = "Save"
script = ExtResource("2_bcp2y")

[node name="Author" type="Label" parent="."]
offset_left = 67.0
offset_top = 578.0
offset_right = 212.0
offset_bottom = 626.0
scale = Vector2(1.30745, 1.29316)
text = "By Lucky"
horizontal_alignment = 1
vertical_alignment = 1
